--- a/index-1.html
+++ b/index-1.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Exploring github</title>
 </head>
 <body>
-    <h1>exploring my github</h1>
+    <h1>Hello Bangladesh</h1>
     <p>Welcome to my city Dhaka</p>
 </body>
 </html>
